origin/FZ54A-22-game-DEVELOP/ seting elements as absolute - preventing jumping

--- a/style-game.css
+++ b/style-game.css
@@ -29,6 +29,7 @@
     justify-content: space-between;
     align-items: center;
     height: 560px;
+    position: relative;
 }
 
 .character {
@@ -36,7 +37,8 @@
     width: 70px;
     background: url('img/ludzik-z-workiem-prawo.png');
     background-size: cover;
-    position: relative;
+    position: absolute;
+    bottom: 0;
 }
 
 .cardboard-box {
@@ -51,44 +53,49 @@
     background: url('img/plane2.png');
     height: 40px;
     width: 55px;
-    position: relative;
+    position: absolute;
     top: 5px;
-    left: 260px;
+    right: 0;
 }
 
 .cloud {
     background: url('img/cloud1.png');
-    position: relative;
+    position: absolute;
     height: 53px;
     width: 100px;
 }
 
+.clouds {
+    position: absolute;
+    top: 10px;
+}
+
 .cloud-first {
-    left: 55px;
-    top: -50px;
+    left: 40px;
+    top: 100px;
 }
 
 .cloud-second {
-    left: -150px;
-    top: -110px;
+    left: -70px;
+    top: 50px;
 }
 
 .cloud-third {
-    left: -20px;
-    top: -130px;
+    left: -180px;
+    top: 90px;
 }
 
 .cloud-fourth {
-    left: 200px;
-    top: -270px;
+    left: 180px;
+    top: 40px;
 }
 
 .cloud-fifth {
-    left: -215px;
-    top: -200px;
+    left: 70px;
+    top: 20px;
 }
 
 .cloud-sixth {
-    left: 150px;
-    top: -300px;
+    left: -240px;
+    top: 30px;
 }
